--- a/templates/admin/index/index.html.twig
+++ b/templates/admin/index/index.html.twig
@@ -489,6 +489,7 @@
     "pimcore/object/gridcolumn/operator/LFExpander.js",
     "pimcore/object/gridcolumn/operator/Trimmer.js",
     "pimcore/object/gridcolumn/operator/Alias.js",
+    "pimcore/object/gridcolumn/operator/VersionGetter.js",
     "pimcore/object/gridcolumn/operator/WorkflowState.js",
     "pimcore/object/gridcolumn/value/DefaultValue.js",
     "pimcore/object/gridcolumn/operator/GeopointRenderer.js",
